tests/snapshots/test_runner__tests__compiler__typecheck__enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<Element> =
  Nil
  Cons({
    current: Element
    next: List<Element>
  })

let xs: Integer =
  let x = Cons({
    current: 1
    next: Cons({
      current: true
      next: Nil
    })
  })
  123

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/enum_1.kk:12:16
   │
12 │       current: true
   │                ^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     | - Integer     | + Boolean   |
     +---------------+-------------+
